[package]
name = "scdb"
version = "0.2.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/sopherapps/scdb"
readme = "README.md"
description = "A very simple and fast key-value store but persisting data to disk, with a 'localStorage-like' API."
authors = ["Martin Ahindura <team.sopherapps@gmail.com>"]
keywords = ["cache", "key-value-store", "disk-cache", "database", "hashmap"]
categories = ["caching", "database"]
exclude = ["examples/*", ".github/*", "docs/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twox-hash = { version = "1.6.3" }
clokwerk = "0.4"
memchr = "2.5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.137"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["sysinfoapi"] }

[dev-dependencies]
serial_test = "0.9.0"
criterion = { version = "0.4" }

[[bench]]
name = "scdb"
harness = false